# hello-world-package

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml
src/: standardplot.py
src/hello_world_package/: __init__.py  __main__.py  calculate.py  hello.py
tests/: test_main.py
