[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hello-world-package"
version = "0.1.0"
license = {file = "LICENSE.txt"}
description = "A simple package template"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy ~= 1.23.5"
]

[project.urls]
"Homepage" = "https://github.com/jfhbuist/hello-world-package"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.coverage.run]
source = ["hello_world_package"]
omit = ["*/__init__.py"]
